# autosales

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  GEMINI.md  README.md  docker-compose.bot.yml  docker-compose.core.yml  docker-compose.monitoring.yml  docker-compose.yml  task.md  task2.md
backend/: .env  main.py  (+5 more)
backend_rust/: Cargo.toml  Dockerfile  PROJECT_OVERVIEW.md  entrypoint.sh
backend_rust/.cargo/: config.toml
backend_rust/.sqlx/: query-01fa67f70dd8c7d833062b6107e50c50160db96c7f4994e6bd4547102c8041a6.json  query-04ce587facd6af9b4a4f04b35e4bece37eb35d2988ba2099424f4ea5555939f3.json  query-05755ff8b74059273802f4586f7f8b640c6340e55407e4a15cce8d744557e7ad.json  query-05d3c091169885aae948544caa485971a725bd8ba83d04688d09d9c63c5ed5c2.json  query-072e69fd7ad14c090ea61975e68c1f162012996135c96f2a073634e9b3edf42d.json  query-0be4dc1e066793268627775ce11362aebf2b61cf43a9bf36cec18633cbfc9ef3.json  query-0c9a16edc6c66ca7459159d23b26a7db1ad99306093d41a482a7565f66af7d65.json  query-0d4fa7305bc723652136a6478cac5a678dee3db5d07bf2e558d9ba9470cb3583.json  query-0e4abde3b80f9ef79cb0bc4e7e2607a00cf92a91b3059630315514a775a980be.json  query-15f7e76627927c7614d4f92a591247035388497695d21b10cfc8a90d550c5223.json  query-18a29f34ec8df6250772b90a632432a528a1e9e8d691fa5b41bf06376534167a.json  query-1945939ba87751bdba3c6863f3ea4c70ef428e62bb66ad9a444b83170a43f190.json  query-1b84c876ffe3285978a6563b03cb8fb5ab1af2fd0219f50472c216509d21130b.json  query-1f9131295b9677df5d73bf3e420330174b3a3227e95292fb0991c0ab2b48047e.json  query-218ee896b918230d09dc2476afd644cf8d95cf340fea7133fd207457e0f88c21.json  query-22e3c29f70d3750cf04c76845c0df2a65f7155b5289792bf8f7e339406f19f4e.json  query-230869740a83619ed302a4df7e54549d1ba048f3ba8e57c8299f5029ae7108fe.json  query-23c5037a06bf52c5e1e3c67b4f08431125680c831161ec5980468df7fc9e7831.json  query-255c6931020850446480930a4a5a113cef8ad830142834f5daded1fde43363f8.json  query-259d86fb93880ea38351eced9e689f58cc6e088985776176708bd899925df2f5.json  query-2921ec75be23943d5c41e8b683bff4d5aabc9aca3ed5b2948fb8bd4644f43554.json  query-29fcea5d2d1ea6a7675456280318ee29a2870ca4943367544578ca3f37f694ad.json  query-2a6310f500369199f231a6f6bef02d95e7519785091ba1ea6bb9d45ccda9ee65.json  query-2dda4ff924e2143c2ea1d3e6a4e279f8c8cdb8c54dbd049a0261c571daeecd4d.json  query-30256bc73198f2a2b39cff2c3e0e1ff0bf33501506794327ee1f1e6f1247b434.json  query-30d771ce0c1d5f316dc52535eff73b6c59a7dda62c12215aec32d7f0060be41e.json  query-33dccdbd081d22dfea7421ad0fd2de5f32238443c2ad8b93490041dc080d9bf1.json  query-3583675e868c9307483cae1af649d08f673c959bdaa098fda9a9146eacc617c6.json  query-371d6d901301897ceebe1de7cfa9fda4205c89cf4b2ffcd661df1ec22fd0740c.json  query-3854ffa766e28f3bada5732d2b01a57e2d5a5e856e83b8f153fb276ee646b157.json  query-3a8df5affb45f94bc33a1e729106ba1f4d41f92c96519b0af7df4f4fd8a2a44d.json  query-3ab4da9821ba46e8a861106f984540914ab76ac2acef33112f222ea54a40384c.json  query-3c0a61c192747829de05345485e11c6da10dac641f8b42256c4ab6a3a43fc876.json  query-3c9a1443ed7d7f9489340b7e89af972763e64bc63e955d99ed9b24dde437c769.json  query-3cf4c132c83c8242e3711affd6055c08518f99c62b87c1ffda8fc56d77d027cd.json  query-40ed9c9382f68163732008bed19a1e635d2263776fa81df4e02b2c309b859465.json  query-4847949f1cb2ead510e34c0738649674cfcafb0dece401f9ae69a702911324f9.json  query-49392b279705ed3fb713f9a73e1c36346d41638e0bf3ba4b763a04d7eac6f673.json  query-4b15192d949de50422d2a76de3e1e5f8fb0f909ad90e42313b9e67270ed8e8f7.json  query-4d2dc1b930281c2f4946b75841eb89e564aa9056efce45eac4abd2268a67835e.json  (+107 more)
backend_rust/migrations/: 20251223162925_init_admin_users.up.sql  20251223162929_init_settings.up.sql  20251223165656_init_permissions.up.sql  20251223165743_init_roles.up.sql  20251223170135_init_role_permissions.up.sql  20251223170311_init_user_roles.up.sql  20251223170546_init_user_permissions.up.sql  20251223173625_init_bot_users.up.sql  20251223173625_init_customers.up.sql  20251223175922_init_bots.up.sql  20251223180458_init_active_tokens.up.sql  20251223180618_init_temporary_tokens.up.sql  20251223181326_init_images.up.sql  20251223182000_init_categories.up.sql  20251223182358_init_products.up.sql  20251223184319_init_stock_movements.up.sql  20251223185441_init_orders.up.sql  20251223185632_init_order_items.up.sql  20251223185633_init_stock_movements.up.sql  20251223190234_init_user_subscriptions.up.sql  20251223193936_init_transactions.up.sql  20251223200307_init_payment_invoices.up.sql  20251223200846_init_audit_logs.up.sql  20251224074534_create_permissions.up.sql  20251224081939_create_system_admin.up.sql  20260117151730_init_broadcasts.up.sql  20260131094243_add_deleted_at_to_bot.up.sql  20260131104422_add_bot_id_to_transaction.up.sql  20260131130000_add_fk_bots_owner_id_customers.up.sql  20260207103109_drop_deleted_at_from_images.up.sql  20260207163001_add_customer_blocked_until.up.sql  20260207170848_clear_expired_blocked_until_trigger.up.sql  20260218170000_init_balance_requests.up.sql  20260228130000_add_expiry_notification_sent_at_to_user_subscriptions.up.sql
backend_rust/src/: bin.rs  config.rs  db.rs  errors.rs  infrastructure.rs  lib.rs  main.rs  middlewares.rs  models.rs  presentation.rs  services.rs  state.rs  workers.rs
backend_rust/src/errors/: api.rs  auth.rs  repository.rs  totp_encryptor.rs
backend_rust/src/infrastructure/: external.rs  repositories.rs
shared_dtos/: Cargo.toml
shared_dtos/.cargo/: config.toml
shared_dtos/src/: admin_user.rs  analytics.rs  audit_log.rs  auth.rs  balance_request.rs  bot.rs  broadcast.rs  can_operate.rs  captcha.rs  category.rs  customer.rs  dashboard.rs  error.rs  image.rs  invoice.rs  lib.rs  list_query.rs  list_response.rs  notification.rs  order.rs  permission.rs  product.rs  role.rs  role_permission.rs  settings.rs  stock_movement.rs  store_balance.rs  transaction.rs  user_permission.rs  user_subscription.rs
tgbot_rust/: Cargo.toml  Dockerfile
tgbot_rust/src/: api.rs  bot.rs  bot_father.rs  bot_manager.rs  config.rs  errors.rs  health_checker.rs  lib.rs  main.rs  manager_bot.rs  models.rs  monitor.rs  utils.rs  webhook.rs
(+733 files in other folders)
