[package]
name = "backend_rust"
version = "0.1.0"
edition = "2024"
default-run = "backend_rust"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.12", features = ["multipart"] }
base64 = "0.22.1"
bcrypt = "0.17.1"
bytes = "1.10"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
envy = "0.4"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-rustls",
    "chrono",
    "migrate",
    "macros",
    "uuid",
] }
thiserror = "2.0"
tokio = { version = "1.47", features = ["full"] }
totp-rs = { version = "5.7.0", features = ["otpauth", "gen_secret"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time"] }
ts-rs = { version = "11.1.0", features = ["uuid-impl", "chrono-impl"] }
utoipa = { version = "5.4.0", features = ["uuid", "chrono"] }
uuid = { version = "1.19.0", features = ["serde"] }
validator = { version = "0.20", features = ["derive"] }
