[package]
name = "backend_rust"
version = "0.1.0"
edition = "2024"
default-run = "backend_rust"

[features]
default = ["contms-provider"]
contms-provider = []

[dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
axum-client-ip = "1.1"
axum-extra = { version = "0.12", features = ["multipart"] }
base64 = "0.22"
bcrypt = "0.17"
blake3 = "1.8"
bytes = "1.10"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.4.0"
dotenvy = "0.15"
envy = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
infer = "0.19"
qrcode = "0.14"
rand = "0.9"
reqwest = { version = "0.13", features = ["json"] }
rust_decimal = "1.39.0"
rust_decimal_macros = "1.39.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.15"
serde_with = "3.16"
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-rustls",
    "chrono",
    "migrate",
    "macros",
    "uuid",
    "rust_decimal",
    "ipnetwork",
] }
thiserror = "2.0"
tokio = { version = "1.49", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
totp-rs = { version = "5.7", features = ["otpauth", "gen_secret"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time", "env-filter"] }
ts-rs = { version = "11.1", features = [
    "uuid-impl",
    "chrono-impl",
    "serde-json-impl",
    "bigdecimal-impl",
] }
urlencoding = "2.1.3"
utoipa = { version = "5.4", features = ["uuid", "chrono", "decimal"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
uuid = { version = "1.19", features = ["serde", "v4"] }
validator = { version = "0.20", features = ["derive"] }

[dev-dependencies]
serial_test = "3.0"
once_cell = "1.19"
