[package]
name = "shared_dtos"
version = "0.1.0"
edition = "2024"

[features]
default = []
sqlx = ["dep:sqlx"]
ts = ["dep:ts-rs"]
openapi = ["dep:utoipa"]
validate = ["dep:validator"]

[dependencies]
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", optional = true, default-features = false, features = [
    "postgres",
    "uuid",
    "chrono",
    "rust_decimal",
    "macros",
] }
ts-rs = { version = "11", optional = true, features = [
    "uuid-impl",
    "chrono-impl",
    "serde-json-impl",
    "bigdecimal-impl",
] }
utoipa = { version = "5", optional = true, features = [
    "uuid",
    "chrono",
    "decimal",
] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
uuid = { version = "1.20", features = ["serde", "v4"] }
validator = { version = "0.20", optional = true, features = ["derive"] }
