[package]
name = "tgbot_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
shared_dtos = { path = "../shared_dtos" }
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
bytes = "1.10"
chrono = { version = "0.4", features = ["serde"] }
deadpool-redis = "0.22"
dotenvy = "0.15"
envy = "0.4"
grammers-client = "0.8"
grammers-mtsender = "0.8"
grammers-session = { version = "0.8", features = ["impl-serde"] }
grammers-tl-types = "0.8"
rand = "0.9"
redis = { version = "1.0", features = ["tokio-comp", "aio"] }
regex = "1.12"
reqwest = { version = "0.13", features = ["json", "query", "form", "multipart"] }
serde = "1.0"
serde_json = "1.0"
serde_qs = "0.15"
serde_urlencoded = "0.7.1"
teloxide = { version = "0.17", features = ["macros", "redis-storage"] }
thiserror = "2.0"
tokio = "1.48"
tokio-stream = "0.1"
tokio-util = "0.7"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "time",
    "local-time",
    "json",
] }
url = "2.5"
uuid = { version = "1.19", features = ["serde", "v4"] }
mime = "0.3.17"
